# cuddly-parakeet

./: .gitignore  LICENSE  README.md  download_weights.py  pyproject.toml  requirements.txt  run.py  upload_to_github.py  启动工具.bat  启动工具.pyw  启动马赛克去除工具.bat
app/: __init__.py  __main__.py  config.py  main.py
app/processing/: __init__.py  detector.py  face_restore.py  inpainting.py  pipeline.py  super_resolution.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: conftest.py  test_api.py  test_detector.py  test_pipeline.py  test_super_resolution.py
